--- a/style.css
+++ b/style.css
@@ -572,6 +572,7 @@ button {
 
 .logo {
   background-color: #fff;
+  border-bottom: 1px solid var(--text-color-light);
 }
 
 .logo__container {
@@ -830,5 +831,324 @@ button {
 
 .active-link {
   color: #fff;
+}
+
+@media screen and (max-width: 320px) {
+  .container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  .quality__img-small {
+    -webkit-transform: translateX(-6rem);
+            transform: translateX(-6rem);
+  }
+  .quality__buttons {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 1rem;
+  }
+}
+
+@media screen and (min-width: 576px) {
+  .espec__category {
+    -ms-grid-columns: (200px)[2];
+        grid-template-columns: repeat(2, 200px);
+    -webkit-column-gap: 3rem;
+            column-gap: 3rem;
+  }
+  .produtos__content {
+    -ms-grid-columns: (200px)[2];
+        grid-template-columns: repeat(2, 200px);
+    padding-bottom: 3rem;
+  }
+  .blog__content {
+    -ms-grid-columns: 450px;
+        grid-template-columns: 450px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer__news {
+    width: 350px;
+  }
+}
+
+@media screen and (min-width: 767px) {
+  .section {
+    padding: 7rem 0 2rem;
+  }
+  .nav {
+    height: calc(var(--header-height)+1.5rem);
+  }
+  .nav__toggle, .nav__close {
+    display: close;
+  }
+  .nav__list {
+    padding-top: 0;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-column-gap: 4rem;
+            column-gap: 4rem;
+  }
+  .nav__link {
+    position: relative;
+    font-size: var(--normal-font-size);
+    text-transform: initial;
+  }
+  .nav__link:after {
+    content: '';
+    position: absolute;
+    width: 1px;
+    height: 12px;
+    background-color: var(--text-color-light);
+    -webkit-transform: translateX(1.25rem);
+            transform: translateX(1.25rem);
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+  }
+  .nav .scroll-header .nav__link {
+    color: var(--text-color);
+  }
+  .nav .scroll-header .active-link {
+    color: var(--title-color);
+  }
+  .nav .scroll-header .active-link::after {
+    background-color: var(--title-color);
+  }
+  .home {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+    -webkit-box-align: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch;
+    position: relative;
+  }
+  .home__content {
+    position: initial;
+  }
+  .home__scroll {
+    bottom: 0;
+    top: 0;
+    margin: 0;
+  }
+  .produtos__filters {
+    -ms-grid-columns: (200px)[3];
+        grid-template-columns: repeat(3, 200px);
+  }
+  .quality__content,
+  .footer__content {
+    -ms-grid-columns: (1f1)[2];
+        grid-template-columns: repeat(2, 1f1);
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
+@media screen and (min-width: 1040px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .home__content {
+    max-width: 400px;
+    margin-right: 7rem;
+    margin-left: auto;
+  }
+  .section__title {
+    padding-right: 15rem;
+    padding-left: 1.75rem;
+  }
+  .section__title::before {
+    height: 28px;
+    width: 4px;
+    top: 12px;
+  }
+  .espec__box {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 2fr .5fr;
+        grid-template-columns: 2fr .5fr;
+  }
+  .espec__group {
+    text-align: initial;
+  }
+  .espec__category {
+    -ms-grid-columns: (250px)[3];
+        grid-template-columns: repeat(3, 250px);
+    -webkit-column-gap: 8rem;
+            column-gap: 8rem;
+  }
+  .espec__line {
+    position: relative;
+  }
+  .espec__line:before {
+    content: '';
+    width: 1px;
+    height: 120px;
+    background-color: var(--text-color-light);
+    position: absolute;
+    right: -5rem;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
+  }
+  .espec__img {
+    width: 80px;
+    margin-bottom: 1.5rem;
+  }
+  .produtos__filters {
+    margin: 4rem 0 5.5rem;
+    -webkit-column-gap: 4rem;
+            column-gap: 4rem;
+  }
+  .produtos__content {
+    -ms-grid-columns: (265px)[3];
+        grid-template-columns: repeat(3, 265px);
+    -webkit-box-pack: initial;
+        -ms-flex-pack: initial;
+            justify-content: initial;
+    -webkit-column-gap: 5rem;
+            column-gap: 5rem;
+  }
+  .produtos__card {
+    border-radius: .75rem;
+  }
+  .produtos__img {
+    width: 200px;
+  }
+  .produtos__shape {
+    padding: 2rem 0;
+    border-radius: .75rem .75rem 0 0;
+  }
+  .produtos__data {
+    padding: 1rem 0 1.5rem 1.5rem;
+  }
+  .produtos__nome {
+    font-size: var(--h3-font-size);
+  }
+  .produtos__button {
+    font-size: 1.5rem;
+    padding: .75rem;
+    right: 1.5rem;
+    top: -1.5rem;
+  }
+  .quality__content {
+    -webkit-column-gap: 6rem;
+            column-gap: 6rem;
+  }
+  .quality__images {
+    margin-top: 2rem;
+  }
+  .quality__img-big {
+    width: 428px;
+  }
+  .quality__img--small {
+    width: 155px;
+    -webkit-transform: translateX(-7rem);
+            transform: translateX(-7rem);
+  }
+  .quality__titulo {
+    margin-bottom: 1.5rem;
+  }
+  .quality__especial {
+    margin-bottom: 1rem;
+  }
+  .logo__container {
+    -ms-grid-columns: (1fr)[5];
+        grid-template-columns: repeat(5, 1fr);
+    padding: 3.5rem 0;
+  }
+  .logo__img {
+    width: 120px;
+  }
+  .blog__container {
+    padding-bottom: .5rem;
+  }
+  .blog__content {
+    -ms-grid-columns: (450px)[2];
+        grid-template-columns: repeat(2, 450px);
+    -webkit-column-gap: 5rem;
+            column-gap: 5rem;
+    padding-top: 2rem;
+  }
+  .footer__content {
+    -ms-grid-columns: (max-width)[4];
+        grid-template-columns: repeat(4, max-width);
+    -webkit-column-gap: 4rem;
+            column-gap: 4rem;
+    padding-bottom: 5.5rem;
+  }
+  .footer__group {
+    margin-top: 3rem;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .footer__titulo {
+    font-size: var(--h2-font-size);
+  }
+  .footer__social {
+    -webkit-column-gap: 2rem;
+            column-gap: 2rem;
+  }
+  .footer__social-link {
+    font-size: 1.5rem;
+  }
+  .scrollup {
+    right: 3rem;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .home__container {
+    padding-top: 10rem;
+  }
+  .home__data {
+    padding-top: 3rem;
+  }
+  .home__titulo {
+    margin-bottom: 2rem;
+  }
+  .home__desc {
+    margin-bottom: 3rem;
+  }
+  .home__scroll {
+    width: 130px;
+  }
+}
+
+@media screen and (min-width: 1700px) {
+  .home {
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.load {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  z-index: 1000;
+}
+
+.load__gif {
+  width: 240px;
 }
 /*# sourceMappingURL=style.css.map */
