--- a/style.scss
+++ b/style.scss
@@ -501,6 +501,7 @@ button {
 
 .logo{
     background-color: #fff;
+    border-bottom: 1px solid var(--text-color-light);
 }
 
 .logo__container{
@@ -597,90 +598,90 @@ button {
 .footer{
     background-color: var(--black-color);
     padding:  4rem 0 2.5rem;
-}
 
-.footer__titulo{
-    color: #fff;
-    font-size: var(--h1-font-size);
-    margin-bottom: 2rem;
-}
+    &__titulo{
+        color: #fff;
+        font-size: var(--h1-font-size);
+        margin-bottom: 2rem;
+    }
 
-.footer__desc{
-    margin-bottom: .75rem;
-}
+    &__desc{
+        margin-bottom: .75rem;
+    }
 
-.footer_news{
-    display: flex;
-    column-gap: .5rem;
-}
+    &_news{
+        display: flex;
+        column-gap: .5rem;
+    }
 
-.footer__input{
-    border: none;
-    outline: none;
-    padding: 1.25rem 1rem;
-    border-radius: .25rem;
-    width: 70%;
-    color: var(--text-color);
-}
+    &__input{
+        border: none;
+        outline: none;
+        padding: 1.25rem 1rem;
+        border-radius: .25rem;
+        width: 70%;
+        color: var(--text-color);
+    }
 
-.footer__button{
-    padding: .75rem;
-    font-size: 2rem;
-    border-radius: .25rem;
-    display: inline-flex;
-    background-color: var(--first-color);
-    transform: translateY(.6rem);
+    &__button{
+        padding: .75rem;
+        font-size: 2rem;
+        border-radius: .25rem;
+        display: inline-flex;
+        background-color: var(--first-color);
+        transform: translateY(.6rem);
 
-}
+    }
 
-.footer__button i{
-    transform: rotate(-30deg);  
-    transition: .5s;
+    &__button i{
+        transform: rotate(-30deg);  
+        transition: .5s;
 
-}
+    }
 
-.footer__button i:hover{
-    transform: rotate(-30deg) translate(.25rem);
-}
+    &__button i:hover{
+        transform: rotate(-30deg) translate(.25rem);
+    }
 
-.footer__content{
-    row-gap: 1.5rem;
+    &__content{
+        row-gap: 1.5rem;
 
-    border-bottom: 1px solid var(--text-color);
-}
+        border-bottom: 1px solid var(--text-color);
+    }
 
-.footer__sub{
-    color: #fff;
-    font-size: var(--h2-font-size);
-    margin-bottom: .75rem;
-}
+    &__sub{
+        color: #fff;
+        font-size: var(--h2-font-size);
+        margin-bottom: .75rem;
+    }
 
-.footer__group{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin-top: 1.5rem;
-}
+    &__group{
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        margin-top: 1.5rem;
+    }
 
-.footer__social{
-    display: flex;
-    justify-content: center;
-    column-gap: 1.5rem;
-    font-size: 1.25rem;
-    margin-bottom: 2rem;
-}
+    &__social{
+        display: flex;
+        justify-content: center;
+        column-gap: 1.5rem;
+        font-size: 1.25rem;
+        margin-bottom: 2rem;
+    }
 
-.footer__social-link{
-    color: #FFF;
-    transition: .4s;
-}
+    &__social-link{
+        color: #FFF;
+        transition: .4s;
+    }
 
-.footer__social-link:hover{
-    color: var(--first-color);
-}
+    &__social-link:hover{
+        color: var(--first-color);
+    }
 
-.footer__copy{
-    font-size: var(--small-font-size);
+    &__copy{
+        font-size: var(--small-font-size);
+    }
 }
 
 ::-webkit-scrollbar{
@@ -726,4 +727,290 @@ button {
 
 .active-link{
     color: #fff;
+}
+
+@media screen and(max-width:320px){
+    .container{
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+    .quality__img-small{
+        transform: translateX(-6rem);
+    }
+    .quality__buttons{
+        flex-direction: column;
+        row-gap:1rem;
+
+    }
+}
+
+@media screen and (min-width:576px){
+    .espec__category{
+        grid-template-columns: repeat(2,200px);
+        column-gap: 3rem;
+
+    }
+    .produtos__content{
+        grid-template-columns: repeat(2,200px);
+        padding-bottom: 3rem;
+    }
+    .blog__content{
+        grid-template-columns: 450px;
+        justify-content: center;
+    }
+
+    .footer__news{
+        width: 350px;
+    }
+}
+
+@media screen and (min-width:767px){
+    .section{
+        padding: 7rem 0 2rem;
+    }
+    .nav{
+        height: calc(var(--header-height)+1.5rem);
+
+        &__toggle,
+        &__close{
+            display: close;
+        }
+        &__list{
+            padding-top: 0;
+            flex-direction: row;
+            column-gap: 4rem;
+        }
+        &__link{
+            position: relative;
+            font-size: var(--normal-font-size);
+            text-transform: initial;
+
+            &:after{
+                content: '';
+                position: absolute;
+                width: 1px;
+                height: 12px;
+                background-color: var(--text-color-light);
+                transform: translateX(1.25rem);
+                top: 0;
+                bottom: 0;
+                margin: auto 0;
+            }
+        }
+        
+        .scroll-header .nav__link{
+            color: var(--text-color);
+        }
+        .scroll-header  .active-link{
+            color: var(--title-color);
+            &::after{
+                background-color: var(--title-color);
+            }
+        }
+    }
+    .home{
+        grid-template-columns: repeat(2,1fr);
+        align-items: stretch;
+        position: relative;
+
+        &__content{
+            position: initial;
+        }
+        &__scroll{
+            bottom: 0;
+            top: 0;
+            margin: 0;
+        }
+    }
+    .produtos__filters{
+        grid-template-columns: repeat(3,200px);
+    }
+    .quality__content,
+    .footer__content{
+        grid-template-columns: repeat(2,1f1);
+        align-items: center;
+    }
+}
+
+@media screen and (min-width:1040px){
+    .container{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .home__content{
+        max-width: 400px;
+        margin-right: 7rem;
+        margin-left: auto;
+    }
+    .section__title{
+        padding-right: 15rem;
+        padding-left: 1.75rem;
+
+        &::before{
+            height: 28px;
+            width: 4px;
+            top: 12px;
+        }
+    }
+    .espec__box{
+        display: grid;
+        grid-template-columns: 2fr .5fr;       
+    }
+    .espec__group{
+        text-align: initial;
+    }
+    .espec__category{
+        grid-template-columns: repeat(3,250px);
+        column-gap: 8rem;
+    }
+    .espec__line{
+        position: relative;
+        &:before{
+            content: '';
+            width: 1px;
+            height: 120px;
+            background-color: var(--text-color-light);
+            position: absolute;
+            right: -5rem;
+            top: 0;
+            bottom: 0;
+            margin: auto 0;
+        }
+    }
+    .espec__img{
+        width: 80px;
+        margin-bottom: 1.5rem;
+    }
+
+    .produtos__filters{
+        margin: 4rem 0 5.5rem;
+        column-gap: 4rem;
+    }
+    .produtos__content{
+        grid-template-columns: repeat(3,265px);
+        justify-content: initial;
+        column-gap: 5rem;
+    }
+    .produtos__card{
+        border-radius: .75rem;
+    }
+    .produtos__img{
+        width: 200px;
+    }
+    .produtos__shape{
+        padding: 2rem 0;
+        border-radius: .75rem .75rem 0 0;
+    }
+    .produtos__data{
+        padding: 1rem 0 1.5rem 1.5rem;
+    }
+    .produtos__nome{
+        font-size: var(--h3-font-size);
+    }
+    .produtos__button{
+        font-size: 1.5rem;
+        padding: .75rem;
+        right: 1.5rem;
+        top: -1.5rem;
+    }
+    .quality__content{
+        column-gap: 6rem;
+    }
+    .quality__images{
+        margin-top: 2rem;
+    }
+    .quality__img-big{
+        width: 428px;
+    }
+    .quality__img--small{
+        width: 155px;
+        transform: translateX(-7rem);
+    }
+    .quality__titulo{
+        margin-bottom: 1.5rem;
+    }
+    .quality__especial{
+        margin-bottom: 1rem;
+    }
+    .logo__container{
+        grid-template-columns: repeat(5,1fr);
+        padding: 3.5rem 0;
+    }
+    .logo__img{
+        width: 120px;
+    }
+    .blog__container{
+        padding-bottom: .5rem;
+    }
+    .blog__content{
+        grid-template-columns: repeat(2,450px);
+        column-gap: 5rem;
+        padding-top: 2rem;
+    }
+    .footer__content{
+        grid-template-columns: repeat(4,max-width);
+        column-gap: 4rem;
+        padding-bottom: 5.5rem;
+    }
+    .footer__group{
+        margin-top: 3rem;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+    .footer__titulo{
+        font-size: var(--h2-font-size);
+    }
+    .footer__social{
+        column-gap: 2rem;
+    }
+    .footer__social-link{
+        font-size: 1.5rem;
+    }
+    .scrollup{
+        right: 3rem;
+    }
+}
+
+@media screen and(min-width:1200px){
+    .home__container{
+        padding-top: 10rem;
+    }
+    .home__data{
+        padding-top: 3rem;
+    }
+    .home__titulo{
+        margin-bottom: 2rem;
+    }
+    .home__desc{
+        margin-bottom: 3rem;
+    }
+    .home__scroll{
+        width: 130px;
+    }
+}
+
+@media screen and(min-width:1700px){
+    .home{
+        max-width:1400px;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+    
+}
+
+.load{
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100%;
+    background-color: hsl(0, 0, 100%);
+    display: grid;
+    place-items: center;
+    z-index: 1000;
+}
+
+.load__gif{
+    width: 240px;
 }
