--- a/style.css
+++ b/style.css
@@ -1142,7 +1142,7 @@ button {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: white;
+  background-color: #fcfcfc;
   display: -ms-grid;
   display: grid;
   place-items: center;
